--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <!--Header section-->
     <header class="header">
@@ -37,8 +38,17 @@
             <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
           </ul>
         </nav>
-        <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="header-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="header-mail link" href="mailto:info@devstudio.com">
+          <svg class="header-icon" width="16" height="12">
+            <use href="./images/icons.svg#mail"></use>
+          </svg>
+          info@devstudio.com</a
+        >
+        <a class="header-phone link" href="tel:+380961111111">
+          <svg class="header-icon" width="10" height="16">
+            <use href="./images/icons.svg#smartphone"></use></svg
+          >+38 096 111 11 11</a
+        >
       </div>
     </header>
     <!-- Main section -->
@@ -56,24 +66,44 @@
           <h2 class="feature-title visually-hidden">Особенности</h2>
           <ul class="feature-list list">
             <li class="feature-item">
+              <div class="features-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#antena"></use>
+                </svg>
+              </div>
               <h3 class="feature-subtitle">Внимание к деталям</h3>
               <p class="feature-desc">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="feature-item">
+              <div class="features-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="feature-subtitle">Пунктуальность</h3>
               <p class="feature-desc">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="feature-item">
+              <div class="features-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="feature-subtitle">Планирование</h3>
               <p class="feature-desc">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="feature-item">
+              <div class="features-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature-subtitle">Современные технологии</h3>
               <p class="feature-desc">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -134,6 +164,60 @@
               <div class="team-wrapper">
                 <h3 class="team-subtitle">Игорь Демьяненко</h3>
                 <p class="team-desc" lang="en">Product Designer</p>
+                <ul class="socials list">
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Инстаграм"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Твиттер"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Фейсбук"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Линкедин"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item card-set-item">
@@ -147,6 +231,60 @@
               <div class="team-wrapper">
                 <h3 class="team-subtitle">Ольга Репина</h3>
                 <p class="team-desc" lang="en">Frontend Developer</p>
+                <ul class="socials list">
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Инстаграм"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Твиттер"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Фейсбук"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Линкедин"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item card-set-item">
@@ -160,6 +298,60 @@
               <div class="team-wrapper">
                 <h3 class="team-subtitle">Николай Тарасов</h3>
                 <p class="team-desc" lang="en">Marketing</p>
+                <ul class="socials list">
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Инстаграм"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Твиттер"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Фейсбук"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Линкедин"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item card-set-item">
@@ -173,6 +365,110 @@
               <div class="team-wrapper">
                 <h3 class="team-subtitle">Михаил Ермаков</h3>
                 <p class="team-desc" lang="en">UI Designer</p>
+                <ul class="socials list">
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Инстаграм"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Твиттер"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Фейсбук"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href=""
+                      target="_blank"
+                      rel="noopener norefferre"
+                      aria-label="иконка Линкедин"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Clients section -->
+      <section class="section clients">
+        <div class="container">
+          <h2 class="clients-title">Постоянные клиенты</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <div class="clients-icon">
+                <svg width="106" height="60">
+                  <use href="./images/icons.svg#client-1"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="clients-item">
+              <div class="clients-icon">
+                <svg width="106" height="60">
+                  <use href="./images/icons.svg#client-2"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="clients-item">
+              <div class="clients-icon">
+                <svg width="106" height="60">
+                  <use href="./images/icons.svg#client-3"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="clients-item">
+              <div class="clients-icon">
+                <svg width="106" height="60">
+                  <use href="./images/icons.svg#client-4"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="clients-item">
+              <div class="clients-icon">
+                <svg width="106" height="60">
+                  <use href="./images/icons.svg#client-5"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="clients-item">
+              <div class="clients-icon">
+                <svg width="106" height="60">
+                  <use href="./images/icons.svg#client-6"></use>
+                </svg>
               </div>
             </li>
           </ul>
@@ -181,7 +477,7 @@
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <div class="container">
+      <div class="footer-address container">
         <a class="footer-logo link" href="./index.html"
           ><span class="logo-blue">Web</span><span class="logo-white">Studio</span>
         </a>
@@ -204,6 +500,63 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="footer-socials container">
+        <p class="footer-title">присоединяйтесь</p>
+        <ul class="footer-socials-list list">
+          <li class="footer-socials-item">
+            <a
+              class="footer-socials-link link"
+              href=""
+              target="_blank"
+              rel="noopener norefferre"
+              aria-label="иконка Инстаграм"
+            >
+              <svg class="socials-icon" width="20" height="20">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-item">
+            <a
+              class="footer-socials-link link"
+              href=""
+              target="_blank"
+              rel="noopener norefferre"
+              aria-label="иконка Твиттер"
+            >
+              <svg class="socials-icon" width="20" height="20">
+                <use href="./images/icons.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-item">
+            <a
+              class="footer-socials-link link"
+              href=""
+              target="_blank"
+              rel="noopener norefferre"
+              aria-label="иконка Фейсбук"
+            >
+              <svg class="socials-icon" width="20" height="20">
+                <use href="./images/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-item"">
+            <a
+              class="footer-socials-link link"
+              href=""
+              target="_blank"
+              rel="noopener norefferre"
+              aria-label="иконка Линкедин"
+            >
+              <svg class="socials-icon" width="20" height="20">
+                <use href="./images/icons.svg#linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
