--- a/portfolio.html
+++ b/portfolio.html
@@ -51,19 +51,19 @@
           <!--Filters-->
           <ul class="filter-list list">
             <li class="filter-item">
-              <button class="btn-mode-grey btn" type="button">Все</button>
+              <button class="btn-filter btn-mode-grey btn" type="button">Все</button>
             </li>
             <li class="filter-item">
-              <button class="btn-mode-grey btn" type="button">Веб-сайты</button>
+              <button class="btn-filter btn-mode-grey btn" type="button">Веб-сайты</button>
             </li>
             <li class="filter-item">
-              <button class="btn-mode-grey btn" type="button">Приложения</button>
+              <button class="btn-filter btn-mode-grey btn" type="button">Приложения</button>
             </li>
             <li class="filter-item">
-              <button class="btn-mode-grey btn" type="button">Дизайн</button>
+              <button class="btn-filter btn-mode-grey btn" type="button">Дизайн</button>
             </li>
             <li class="filter-item">
-              <button class="btn-mode-grey btn" type="button">Маркетинг</button>
+              <button class="btn-filter btn-mode-grey btn" type="button">Маркетинг</button>
             </li>
           </ul>
           <!--Projects-->
@@ -212,7 +212,7 @@
 
     <!-- Footer section -->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-contacts">
         <a class="footer-logo link" href="./index.html"
           ><span class="logo-blue">Web</span><span class="logo-white">Studio</span>
         </a>
@@ -235,6 +235,63 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="container footer-socials">
+        <p class="footer-title">присоединяйтесь</p>
+        <ul class="footer-socials-list list">
+          <li class="footer-socials-item">
+            <a
+              class="footer-socials-link link"
+              href=""
+              target="_blank"
+              rel="noopener norefferre"
+              aria-label="иконка Инстаграм"
+            >
+              <svg class="socials-icon" width="20" height="20">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-item">
+            <a
+              class="footer-socials-link link"
+              href=""
+              target="_blank"
+              rel="noopener norefferre"
+              aria-label="иконка Твиттер"
+            >
+              <svg class="socials-icon" width="20" height="20">
+                <use href="./images/icons.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-item">
+            <a
+              class="footer-socials-link link"
+              href=""
+              target="_blank"
+              rel="noopener norefferre"
+              aria-label="иконка Фейсбук"
+            >
+              <svg class="socials-icon" width="20" height="20">
+                <use href="./images/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-item"">
+            <a
+              class="footer-socials-link link"
+              href=""
+              target="_blank"
+              rel="noopener norefferre"
+              aria-label="иконка Линкедин"
+            >
+              <svg class="socials-icon" width="20" height="20">
+                <use href="./images/icons.svg#linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
