--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
         >
         <a class="header-phone link" href="tel:+380961111111">
           <svg class="header-icon" width="10" height="16">
-            <use href="./images/icons.svg#smartphone"></use></svg
-          >+38 096 111 11 11</a
-        >
+            <use href="./images/icons.svg#smartphone"></use></svg>+38 096 111 11 11</a>
       </div>
     </header>
     <!-- Main section -->
@@ -477,8 +475,9 @@
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <div class="footer-address container">
-        <a class="footer-logo link" href="./index.html"
+      <div class="footer-content container">
+        <div class="footer-address">
+          <a class="footer-logo link" href="./index.html"
           ><span class="logo-blue">Web</span><span class="logo-white">Studio</span>
         </a>
         <address class="address">
@@ -500,9 +499,9 @@
             </li>
           </ul>
         </address>
-      </div>
-      <div class="footer-socials container">
-        <p class="footer-title">присоединяйтесь</p>
+        </div>
+        <div class="footer-socials">
+          <p class="footer-title">присоединяйтесь</p>
         <ul class="footer-socials-list list">
           <li class="footer-socials-item">
             <a
@@ -536,28 +535,26 @@
               href=""
               target="_blank"
               rel="noopener norefferre"
-              aria-label="иконка Фейсбук"
-            >
+              aria-label="иконка Фейсбук">
               <svg class="socials-icon" width="20" height="20">
                 <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="footer-socials-item"">
+          <li class="footer-socials-item">
             <a
               class="footer-socials-link link"
               href=""
               target="_blank"
               rel="noopener norefferre"
-              aria-label="иконка Линкедин"
-            >
+              aria-label="иконка Линкедин">
               <svg class="socials-icon" width="20" height="20">
                 <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
           </li>
         </ul>
-      </div>
+        </div>
     </footer>
   </body>
 </html>
