--- a/portfolio.html
+++ b/portfolio.html
@@ -29,16 +29,23 @@
         <nav class="header-nav">
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link" href="./index.html">Студия</a>
+              <a class="header-link header-link-current link" href="./index.html">Студия</a>
             </li>
             <li class="header-item">
-              <a class="header-link header-link-current link" href="./portfolio.html">Портфолио</a>
+              <a class="header-link link" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
           </ul>
         </nav>
-        <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="header-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="header-mail link" href="mailto:info@devstudio.com">
+          <svg class="header-icon" width="16" height="12">
+            <use href="./images/icons.svg#mail"></use>
+          </svg>
+          info@devstudio.com</a
+        >
+        <a class="header-phone link" href="tel:+380961111111">
+          <svg class="header-icon" width="10" height="16">
+            <use href="./images/icons.svg#smartphone"></use></svg>+38 096 111 11 11</a>
       </div>
     </header>
 
@@ -212,8 +219,9 @@
 
     <!-- Footer section -->
     <footer class="footer">
-      <div class="container footer-contacts">
-        <a class="footer-logo link" href="./index.html"
+      <div class="footer-content container">
+        <div class="footer-address">
+          <a class="footer-logo link" href="./index.html"
           ><span class="logo-blue">Web</span><span class="logo-white">Studio</span>
         </a>
         <address class="address">
@@ -235,9 +243,9 @@
             </li>
           </ul>
         </address>
-      </div>
-      <div class="container footer-socials">
-        <p class="footer-title">присоединяйтесь</p>
+        </div>
+        <div class="footer-socials">
+          <p class="footer-title">присоединяйтесь</p>
         <ul class="footer-socials-list list">
           <li class="footer-socials-item">
             <a
@@ -271,28 +279,26 @@
               href=""
               target="_blank"
               rel="noopener norefferre"
-              aria-label="иконка Фейсбук"
-            >
+              aria-label="иконка Фейсбук">
               <svg class="socials-icon" width="20" height="20">
                 <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="footer-socials-item"">
+          <li class="footer-socials-item">
             <a
               class="footer-socials-link link"
               href=""
               target="_blank"
               rel="noopener norefferre"
-              aria-label="иконка Линкедин"
-            >
+              aria-label="иконка Линкедин">
               <svg class="socials-icon" width="20" height="20">
                 <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
           </li>
         </ul>
-      </div>
+        </div>
     </footer>
   </body>
 </html>
