--- a/index.html
+++ b/index.html
@@ -428,46 +428,46 @@
           <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="clients-list list">
             <li class="clients-item">
-              <div class="clients-icon">
-                <svg width="106" height="60">
+              <a class="clients-link" href="">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#client-1"></use>
                 </svg>
-              </div>
+              </a>
             </li>
             <li class="clients-item">
-              <div class="clients-icon">
-                <svg width="106" height="60">
+              <a class="clients-link" href="">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#client-2"></use>
                 </svg>
-              </div>
+              </a>
             </li>
             <li class="clients-item">
-              <div class="clients-icon">
-                <svg width="106" height="60">
+             <a class="clients-link" href="">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#client-3"></use>
                 </svg>
-              </div>
+              </a>
             </li>
             <li class="clients-item">
-              <div class="clients-icon">
-                <svg width="106" height="60">
+              <a class="clients-link" href="">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#client-4"></use>
                 </svg>
-              </div>
+              </a>
             </li>
             <li class="clients-item">
-              <div class="clients-icon">
-                <svg width="106" height="60">
+              <a class="clients-link" href="">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#client-5"></use>
                 </svg>
-              </div>
+              </a>
             </li>
             <li class="clients-item">
-              <div class="clients-icon">
-                <svg width="106" height="60">
+              <a class="clients-link" href="">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#client-6"></use>
                 </svg>
-              </div>
+              </a>
             </li>
           </ul>
         </div>
