--- a/index.html
+++ b/index.html
@@ -383,8 +383,7 @@
                       href=""
                       target="_blank"
                       rel="noopener norefferre"
-                      aria-label="иконка Твиттер"
-                    >
+                      aria-label="иконка Твиттер">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
